Fix liquibase changelog and java version