@@ -6,11 +6,10 @@ import com.ua.javarush.mentor.persist.model.Role;
 import com.ua.javarush.mentor.persist.model.RoleToPermission;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
-import org.springframework.core.convert.converter.Converter;
 
 @Mapper(componentModel = "spring", unmappedTargetPolicy = org.mapstruct.ReportingPolicy.IGNORE)
 public interface RoleToPermissionMapper {
-    @Mapping(target = "permissions", expression = "java(role.getPermissions().stream().map(RoleToPermission::getPermission).toList())")
+    @Mapping(target = "permissions", expression = "java(role.getPermissions().stream().map(RoleToPermission::getPermission).collect(java.util.stream.Collectors.toList()))")
     RoleToPermissionDTO mapToDto(Role role);
 
     @Mapping(target = "roleId", source = "roleId")
